# ImpulsiveOrbitalTransfersOptimizationUsingPSO

./: .gitignore  CMakeLists.txt  README.md  Visualizer.py  devcontainer.json
Legacy/: PSO.cpp  PSO.hpp  Particle.hpp
docs/: Doxyfile  doxygen-awesome.css
docs/html/: Animation_8cpp.html  Animation_8cpp__incl.map  Animation_8cpp__incl.md5  Animation_8cpp_source.html  Animation_8hpp.html  Animation_8hpp.js  Animation_8hpp__dep__incl.map  Animation_8hpp__dep__incl.md5  Animation_8hpp_source.html  Camera_8cpp.html  Camera_8cpp.js  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8cpp_source.html  Camera_8hpp.html  Camera_8hpp.js  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.map  Camera_8hpp__incl.md5  Camera_8hpp_source.html  Constants_8hpp.html  Constants_8hpp.js  Constants_8hpp__dep__incl.map  Constants_8hpp__dep__incl.md5  Constants_8hpp_source.html  CoordinateSystem_8hpp.html  CoordinateSystem_8hpp.js  CoordinateSystem_8hpp__dep__incl.map  CoordinateSystem_8hpp__dep__incl.md5  CoordinateSystem_8hpp__incl.map  CoordinateSystem_8hpp__incl.md5  CoordinateSystem_8hpp_source.html  ExactSolution_8hpp.html  ExactSolution_8hpp.js  ExactSolution_8hpp__dep__incl.map  ExactSolution_8hpp__dep__incl.md5  ExactSolution_8hpp__incl.map  ExactSolution_8hpp__incl.md5  ExactSolution_8hpp_source.html  (+280 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  (+52 more)
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Constants.hpp  ExactSolution.hpp  Functions.hpp  Logger.hpp  OrbitProblem.hpp  PSO.hpp  Particle.hpp  Swarm.hpp
include/core/: Constants.hpp  CoordinateSystem.hpp  ExactSolution.hpp  LambertSolver.hpp  OrbitMechanics.hpp  OrbitProblem.hpp
include/optimization/: Logger.hpp  PSO.hpp  PSOGlobals.hpp  Particle.hpp  Swarm.hpp
include/rendering/: Animation.hpp  Camera.hpp  ImpulseVisu.hpp  OrbitModel.hpp  RenderEngine.hpp  Shader.hpp  TransferModel.hpp
include/visualization/: Animation.hpp  Camera.hpp  OrbitModel.hpp  Results.hpp  Shader.hpp  TransferModel.hpp
rendering/include/: Animation.hpp  Camera.hpp  ImpulseModel.hpp  OrbitModel.hpp  Results.hpp  Shader.hpp  TransferModel.hpp
rendering/src/: Animation.cpp  Camera.cpp  ImpulseModel.cpp  OrbitModel.cpp  Shader.cpp  TransferModel.cpp  main.cpp
ressources/: ProfAnalysis.txt  convergence_log.csv  results.txt
shaders/: impulse.vert  orbit.vert  orbit_transfer.frag  transfer.frag  transfer.vert
src/: ExactSolution.cpp  Logger.cpp  OrbitProblem.cpp  PSO.cpp  Particle.cpp  Render.cpp  Swarm.cpp  main.cpp
src/application/: pso_main.cpp  render_main.cpp
src/core/: LambertSolver.cpp  OrbitMechanics.cpp  OrbitProblem.cpp
src/optimization/: Logger.cpp  PSO.cpp  Swarm.cpp
src/rendering/: Camera.cpp
src/visualization/: Animation.cpp  Camera.cpp  OrbitModel.cpp  Shader.cpp  TransferModel.cpp
test/: test_particle.cpp  test_swarm.cpp
tests/: test_LambertSolver.cpp  test_OrbitMechanics.cpp  test_OrbitProblem.cpp  test_PSO.cpp  test_particle.cpp  test_swarm.cpp
